# autoSE

./: .gitignore  README.md  file.diff  format.sh  install.sh
.github/workflows/: ci.yml  docker-image.yml  ruff.yml  rust.yml
client/april/: Cargo.toml  build.rs
client/april/assets/: q.yml  simple_new_file.yml  unit-test.yml
client/april/examples/: cli.rs
client/april/src/: git_utils.rs  lib.rs  llm_client.rs
client/april/src/utils/: git.rs  markdown.rs  mod.rs  spinner.rs
server/april/: Dockerfile  README.md  api.py  common.py  cover.py  feed.py  index.py  intro.md  issue.py  logger.py  metrics.py  rag.py  requirements.txt  task.py  tf.py  ui.py  ui_tf.py  uix.py  utils.py  websocket.py
server/april/test/: demo1.py  feed1.py  test_api.py
server/april/tests/: test_api.py
server/parse_se_logs/: Cargo.toml  pyproject.toml
server/parse_se_logs/src/: lib.rs
