[package]
name = "april"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "lint"
path = "src/bin/lint.rs"


[dependencies]
log = "0.4"
serde_json = "1.0.115"
thiserror = "1.0"
anyhow = "1.0"
ehttp = "0.5.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
minijinja = "1.0.16"
env_logger = "0.10"
