[package]
name = "april"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "ailint"
path = "src/bin/lint.rs"


[dependencies]
log = "0.4"
serde_json = "1.0.115"
thiserror = "1.0"
anyhow = "1.0"
ehttp = "0.5.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.10"
crossterm = "0.27.0"
ansi-colors = "0.3.0"
lazy_static = "1.4.0"
syntect = "5.2.0"
ansi_colours = "1.2.2"
bincode = "1.3.3"
textwrap = "0.16.1"
websocket = {version="0.27.1", features = ["sync"]}
