[package]
name = "parse_se_logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "parse_se_logs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
pyo3 = "0.21.1"
serde_json = "1.0.117"
tempfile = "3.10.1"
walkdir = "2.5.0"
